resources/sass/calendar/viewport.scss
/* ------------------ Overall Layout ----------------- */

#calendar {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    align-items: center;
    margin-bottom:5px;
    width: 100%;
    color: $main-text-color;
    min-height: 85%;
    justify-content: center;

    &.single_month {
        align-items: stretch;
    }
}

.timespan {

    &_container{
        display: flex;
        align-self: flex-start;
        text-align: center;
        flex-direction: column;
        flex: 1 0 85%;
        position: relative;
        background-color: $card-bg-color;
        border-radius: 4px;
        margin: 24px 20px;
        min-width: calc(100% - 40px);
        overflow: hidden;
        box-shadow: 0 10px 15px -3px rgba(0,0,0,.1), 0 4px 6px -2px rgba(0,0,0,.05);
        transition: all 0.3s cubic-bezier(.25,.8,.25,1);

        .week_day_name{
            flex: 1 0;
            text-align:center;
            overflow: hidden;
            text-overflow: ellipsis;
            min-width: 5rem;
        }

        .week_day_name:not(:last-child){
            border-right:1px solid $calendar-border-color;
        }
    }

    &_name {
        text-align: center;
        font-size: 1.4rem;
        line-height: 2.2rem;
    }

    &_intercalary {
        border-top:0 !important;
    }

    &_row {
        display: flex;
        flex-direction: row;
        flex: 1;

        &.intercalary{

            .tall{
                margin:0;
            }
        }

        &_names{
            display: flex;
            flex-direction: row;
        }

        &_container{
            display: flex;
            flex-direction: column;
            overflow-x: auto;
            flex: 1;

            &:not(.intercalary){
                border-top: 1px solid $calendar-border-color;
            }
        }
    }

    &_day {
        display: flex;
        flex-direction: column;
        min-height:8rem;
        flex: 1;
        background-color: $card-bg-color;
        min-width: 5rem;
        position: relative;
        border-top:1px solid $calendar-border-color;

        &.empty_timespan_day{
            background-color:$gray-secondary;
        }

        &:not(:last-child){
            border-right:1px solid $calendar-border-color;
        }

        &:hover {
            .btn_create_event, .weather_icon {
                visibility: visible;
            }
        }
    }

    &_intercalary{
        background-color: $card-bg-color;
        display: flex;
        flex-direction: column;
        min-height:8rem;
        flex: 1;
        min-width: 5rem;

        &:not(:first-child){
            border-left:1px solid $calendar-border-color;
        }
    }

    &_number{
        display:inline-block;
        margin-left:0.22222em;
    }

    &_overflow {
        display: flex;
        flex-direction: column;
        min-height:8rem;
        flex: 1;
        color: rgba(#98a0a6, 0.6);
        background-image: $disabled-crosshatch;
        cursor: not-allowed;
        min-width: 5rem;
        border-top:1px solid $calendar-border-color;

        &.intercalary{
            min-width: initial;
        }

        &:not(:last-child) {
            border-right: 1px solid $calendar-border-color;
            padding-left: 0;
        }
    }
}

.day_column{
    flex-direction: column;
    min-width:32px;
    max-width:50%;
    flex-grow: 1;
    height:100px;
}

.day_row{
    display: inline-flex;
    flex-direction: row;
    margin:0 0 0.2rem 0;

    .number{
        min-height:1.5rem;
        margin-left:5px;
    }

    .year_day{
        font-size:0.75rem;
        margin-left:5px;
    }

    &.text{
        display:inline;
        text-align:center;
        border-bottom:1px solid $calendar-border-color;
        padding:4px 5px;
        font-size:0.8rem;
    }
}

.day_row:nth-last-child(2) {
    flex-grow: 1;
}

.day_row:last-child{
    margin-top:auto;
}

.weather_popup {
    position: absolute;
    width: 28px;
    left: calc(50% - 14px);
}

.day_row .title{
    text-align:center;
    -webkit-box-flex: 1;      /* OLD - iOS 6-, Safari 3.1-6 */
    -moz-box-flex: 1;         /* OLD - Firefox 19- */
    -webkit-flex: 1;          /* Chrome */
    -ms-flex: 1;              /* IE 10 */
    flex: 1;                  /* NEW, Spec - Opera 12.1, Firefox 20+ */
}

.btn_create_event{
    position: relative;
    padding: 0.1rem;
    font-size: 10pt;
    visibility: hidden;
    transition: visibility 0s;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin: 0 0.2rem;
}

.btn_create_event:hover{
    cursor: pointer;
}

.day_row .weather{
    font-size:10pt;
    padding-left:2px;
}

.day_row .season_color {
    width: 10px;
    height: 10px;
    margin-top: 0.3rem;
    margin-right: 0.3rem;
    border-radius: 50%;
    opacity: 0.8;
}

.weather_icon{
    background: url('/resources/icons/weather_icon.png');
    background-size: contain;
    width:20px !important;
    height:20px !important;
    top:0;
    left:0;
    margin-top:5px;
    visibility: hidden;
}

.weather_icon.sticky{
    visibility: visible;
}

.event{
    font-size: 12px;
    padding: 0.4rem 0.5rem;
    margin: 0.3rem 0 0;
    text-align: left;
    width: 100%;
    min-width: min-content;
    border-radius: 4px;

    &_container{
        align-self: center;
        width: 100%;
        padding: 0.2rem;
        flex-direction: column;
    }

    &:hover{
        cursor: pointer;
    }

    &.Dark{
        color: #ffffff;
    }

    &.Light{
        color: #404040;
    }

    &.dot{
        color: #000000;

        &::before{
            line-height: 0;
            content: "• ";
            font-weight: 900;
        }
    }

    &.hidden_event{
        background-image:$disabled-crosshatch;
    }

    &.background{
        color: #ffffff;
    }
}

.era.hidden{
    visibility: hidden;
}
/* ... */

